<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border_listview">

    <TextView
        android:id="@+id/popupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/admin_code" />

    <EditText
        android:id="@+id/admin_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/popupTextView"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin_access"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:background="@color/GreyBackground">

        <Button
            android:id="@+id/cancelAdminAccess"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:text="@string/btnCancel"
            android:textSize="10dp" />

        <Button
            android:id="@+id/validateAdminAccess"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/btnConfirm"
            android:textSize="10dp" />

    </LinearLayout>


</RelativeLayout>