<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo_starting_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/gammelstads_title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/team_screen_title"
        android:textColor="@color/White"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ltu.course.mobile.project.greenerfootballcup.utilities.CustomView.LoadingView
            android:id="@+id/loadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/players"
            android:layout_alignEnd="@id/players"
            android:layout_alignLeft="@id/players"
            android:layout_alignRight="@id/players"
            android:layout_alignStart="@id/players"
            android:layout_alignTop="@id/players"
            android:layout_marginTop="0dp" />

        <ListView
            android:id="@+id/players"
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:background="@drawable/border_listview"
            android:padding="0dp"
            android:paddingLeft="5dp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/preview_signature"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_listview"
            android:padding="0dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAdminAccess"
                android:layout_width="116dp"
                android:layout_height="35dp"
                android:text="@string/btnAdminAccess"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="116dp"
                android:layout_height="35dp"
                android:text="@string/btnConfirm"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>